--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR Fruit Ninja</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="loading" class="loading">Loading AI Models...</div>
-    <video id="webcam" autoplay playsinline></video>
-    <canvas id="game-canvas"></canvas>
-    <div id="ui-layer">
-      <div id="score">Score: 0</div>
-      <div id="lives" style="position: absolute; top: 60px; left: 20px; color: #ff6b6b; font-size: 32px; font-weight: bold; text-shadow: 2px 2px 4px #000; font-family: 'Arial', sans-serif;">Lives: 20</div>
-      <div id="game-over" class="hidden">
-        <h1>Game Over</h1>
-        <p>Final Score: <span id="final-score">0</span></p>
-        <button id="restart-btn">Play Again</button>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AR Fruit Ninja</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="loading" class="loading">Loading AI Models...</div>
+  <video id="webcam" autoplay playsinline></video>
+  <canvas id="game-canvas"></canvas>
+  <div id="ui-layer">
+    <div id="main-menu"
+      style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; background: rgba(0,0,0,0.8); z-index: 100; position: absolute; width: 100%;">
+      <h1
+        style="color: #fff; font-size: 48px; text-shadow: 0 0 10px #0ff; margin-bottom: 40px; font-family: sans-serif;">
+        AR Fruit Ninja & Shooter</h1>
+      <button id="btn-fruit" class="menu-btn"
+        style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #ff6b6b; border: none; color: white; border-radius: 10px;">Play
+        Fruit Slicer</button>
+      <button id="btn-shooter" class="menu-btn"
+        style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #4ECDC4; border: none; color: white; border-radius: 10px;">Play
+        Space Shooter</button>
     </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <div id="score" style="display: none;">Score: 0</div>
+    <div id="lives"
+      style="position: absolute; top: 60px; left: 20px; color: #ff6b6b; font-size: 32px; font-weight: bold; text-shadow: 2px 2px 4px #000; font-family: 'Arial', sans-serif;">
+      Lives: 20</div>
+    <div id="game-over" class="hidden">
+      <h1>Game Over</h1>
+      <p>Final Score: <span id="final-score">0</span></p>
+      <button id="restart-btn">Play Again</button>
+    </div>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
