feat: add AR Artist drawing game mode with hand tracking and pinch-to-draw functionality.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <button id="btn-shooter" class="menu-btn"
         style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #4ECDC4; border: none; color: white; border-radius: 10px;">Play
         Space Shooter</button>
+      <button id="btn-drawing" class="menu-btn"
+        style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #FFE66D; border: none; color: black; border-radius: 10px;">Play
+        AR Artist</button>
     </div>
     <div id="score" style="display: none;">Score: 0</div>
     <div id="lives"
