feat: Introduce "Super Power" (Telekinesis) game mode with hand physics and a new UI button.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <button id="btn-drawing" class="menu-btn"
         style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #FFE66D; border: none; color: black; border-radius: 10px;">Play
         AR Artist</button>
+      <button id="btn-telekinesis" class="menu-btn"
+        style="padding: 20px 40px; font-size: 24px; margin: 10px; cursor: pointer; background: #6C5CE7; border: none; color: white; border-radius: 10px;">Play
+        Super Power</button>
     </div>
     <div id="score" style="display: none;">Score: 0</div>
     <div id="lives"
